--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.slim.js"></script>
 <script>
-  var socket = io.connect('http://nodejs-mongo-persistent-for.7e14.starter-us-west-2.openshiftapps.com/');
+  var socket = io.connect('http://nodejs-mongo-persistent-for.7e14.starter-us-west-2.openshiftapps.com:8000/');
   socket.on('news', function (data) {
     console.log(data);
     socket.emit('my other event', { my: 'data' });
